[project]
name = "cn-nlp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Yi Ming Tan", email = "ymtan.2062@gmail.com"},
]
dependencies = ["requests>=2.32.3", "beautifulsoup4>=4.13.3", "jieba>=0.42.1", "scikit-learn>=1.6.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
